--- a/index.html
+++ b/index.html
@@ -2,15 +2,12 @@
 <html>
 
    <head>
-      <title>HTML Frames</title>
+      <title>Chance Watkins Official Site</title> 
+      <link rel="stylesheet" href="style.css"> 
    </head>
    
-   
-   <frameset rows = "10%,80%,10%"> a
-      <frame name = "a"/>
-
-      <noframes>
-         <body>Your browser does not support frames.</body>
-      </noframes>
+   <top> 
+      aaa 
+     </top>
    
 </html>
