--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
       <link rel="stylesheet" href="style.css"> 
    </head>
    
-   <top> 
-      aaa 
-     </top>
+   <p class = "top"> hi </p> 
    
 </html>
