--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
    <head>
       <title>Chance Watkins Official Site</title> 
-      <link rel="stylesheet" href="style.css"> 
+      <link rel="stylesheet" href="/style.css"> 
    </head>
    
    <p class = "top"> hi </p> 
