--- a/index.html
+++ b/index.html
@@ -3,9 +3,22 @@
 
    <head>
       <title>Chance Watkins Official Site</title> 
-      <link rel="stylesheet" href="/style.css"> 
-   </head>
+      <link rel="stylesheet" href="style.css"> 
+   </head> 
+
+<body> 
+
+<h1 class = "title"> Chance Watkins Official Website</h1> 
+   <img src="testimage.jpg" alt="Test Image" </img> 
+   <p class = "nav" > About | Music | Books | Projects | Blog | Links </p> 
+
+
+
+<img class = "socialicons"  src="socialmediaimages/twitch.png" alt="Twitch Link" </socialicons > 
+<img  class = "socialicons" src="socialmediaimages/youtube.png" alt="YouTube Link" </socialicons > 
+<img class = "socialicons" src="socialmediaimages/soundcloud.png" alt="Soundcloud Link" </socialicons > 
+
    
-   <p class = "top"> hi </p> 
-   
+
+</body> 
 </html>
