--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body> 
 
 <h1 class = "title"> Chance Watkins Official Website</h1> 
-   <img src="https://github.com/JosephCWatkins/chancewatkinsofficial/blob/main/testimage.jpg" alt="Test Image" </img> 
+   <img src="testimage.jpg" alt="Test Image" </img> 
    <p class = "nav" > About | Music | Books | Projects | Blog | Links </p> 
 
 
