--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
 Christian who enjoys spending time with his two kitties Luna and Moonlight as 
 well as eating too much chocolate. </pre> 
 -->
-<iframe src = "C:/Users/galfa/OneDrive/Documents/officialsitestuff/contents/aboutcontents.html"  width="100%" height="400vw" scrolling = "no"  overflow = "hidden"> </iframe>
+<iframe src = "https://josephcwatkins.github.io/chancewatkinsofficial/contents/aboutcontents.html"  width="100%" height="400vw" scrolling = "no"  overflow = "hidden"> </iframe>
 
 
    <p class = "nav" > About | Music | Books | Projects | Blog | Links </p> 
