--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body> 
 
 <h1 class = "title"> Chance Watkins Official Website</h1> 
-   <img src="testimage.jpg" alt="Test Image" </img>  <div id="twitch-embed"></div>
+   <img src="testimage.jpg" alt="Test Image" </img>  
+   
+   <div id="twitch-embed"></div>
 
     <!-- Load the Twitch embed JavaScript file -->
     <script src="https://embed.twitch.tv/embed/v1.js"></script>
@@ -17,11 +19,11 @@
     <!-- Create a Twitch.Embed object that will render within the "twitch-embed" element -->
     <script type="text/javascript">
       new Twitch.Embed("twitch-embed", {
-        width: 854,
-        height: 480,
-        channel: "monstercat",
+        width: 1400,
+        height: 906,
+        channel: "sirchancewatkins",
         // Only needed if this page is going to be embedded on other websites
-        parent: ["embed.example.com", "othersite.example.com"]
+        parent: ["https://josephcwatkins.github.io/chancewatkinsofficial/"]
       });
     </script>
    <p class = "nav" > About | Music | Books | Projects | Blog | Links </p> 
