--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         height: 906,
         channel: "sirchancewatkins",
         // Only needed if this page is going to be embedded on other websites
-        parent: ["https://josephcwatkins.github.io/chancewatkinsofficial/"]
+        parent: ["embed.example.com"]
       });
     </script>
    <p class = "nav" > About | Music | Books | Projects | Blog | Links </p> 
