--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <h1 class = "title"> Chance Watkins Official Website</h1> 
    <img src="testimage.jpg" alt="Test Image" </img>  
    
-   <div id="twitch-embed"></div>
+   <div style = "text-align: center;" id="twitch-embed"></div>
 
     <!-- Load the Twitch embed JavaScript file -->
     <script src="https://embed.twitch.tv/embed/v1.js"></script>
