--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <h1 class = "title"> Chance Watkins Official Website</h1> 
    <img src="testimage.jpg" alt="Test Image" </img>  
    
-   <div style = "text-align: center;" id="twitch-embed"></div>
+   
+   <a style = "text-align: center">  
+   <div  id="twitch-embed"></div>
 
     <!-- Load the Twitch embed JavaScript file -->
     <script src="https://embed.twitch.tv/embed/v1.js"></script>
@@ -25,7 +27,8 @@
         // Only needed if this page is going to be embedded on other websites
         parent: ["embed.example.com"]
       });
-    </script>
+    </script> 
+   </a> 
    <p class = "nav" > About | Music | Books | Projects | Blog | Links </p> 
 
 
