--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body> 
 
 <h1 class = "title"> Chance Watkins Official Website</h1> 
-   <img src="testimage.jpg" alt="Test Image" </img>  
+<!--    <img src="testimage.jpg" alt="Test Image" </img>  --> 
    
    
    <a style = "text-align: center">  
